@@ -715,12 +715,37 @@ console_rows_max_help   Number of lines of console output when scrolling back
 console_indent_help     Number of spaces each continuation of a wrapped console line is indented by
 console_decorate_id_help			Decorates every line of console output with the client ID
 console_decorate_ip_help			Decorates every line of console output with the client IP
+console_decorate_timestamp_help			Decorates every line of console output with the current date and time
 console_ladder_log_help			Sends ladder log output to the console
+ladderlog_decorate_timestamp_help		Decorates every line of ladderlog output with the current date and time
 ladderlog_write_all_help Set all the LADDER_LOG_WRITE_* settings to the same value
 ladderlog_write_all_usage Usage: LADDER_LOG_WRITE_ALL 1|0
 ladderlog_write_all_enabled Enabled full ladderlog output.
 ladderlog_write_all_disabled Disabled ladderlog output.
+ladderlog_write_authority_blurb_help          Write to ladderlog: AUTHORITY_BLURB <name> <value>
+ladderlog_write_basezone_conquered_help       Write to ladderlog: BASEZONE_CONQUERED <team> <cx> <cy>
+ladderlog_write_basezone_conquerer_help       Write to ladderlog: BASEZONE_CONQUERER <player>
+ladderlog_write_chat_help                     Write to ladderlog: CHAT <chatter> [/me] <chat string>
+ladderlog_write_death_frag_help               Write to ladderlog: DEATH_FRAG <prey> <predator>
+ladderlog_write_death_suicide_help            Write to ladderlog: DEATH_SUICIDE <player>
+ladderlog_write_death_teamkill_help           Write to ladderlog: DEATH_TEAMKILL <prey> <predator>
+ladderlog_write_game_end_help                 Write to ladderlog: GAME_END
+ladderlog_write_game_time_help                Write to ladderlog: GAME_TIME <time> (see also: GAME_TIME_INTERVAL)
+ladderlog_write_match_winner_help             Write to ladderlog: MATCH_WINNER <winner>
+ladderlog_write_new_match_help                Write to ladderlog: NEW_MATCH
+ladderlog_write_new_round_help                Write to ladderlog: NEW_ROUND
+ladderlog_write_num_humans_help               Write to ladderlog: NUM_HUMANS <number of humans>
+ladderlog_write_online_player_help            Write to ladderlog: ONLINE_PLAYER <name> [<ping> [<team>]]
+ladderlog_write_player_entered_help           Write to ladderlog: PLAYER_ENTERED <name> <IP> <screen name>
+ladderlog_write_player_left_help              Write to ladderlog: PLAYER_LEFT <name> <IP>
+ladderlog_write_player_renamed_help           Write to ladderlog: PLAYER_RENAMED <old name> <new name> <ip> <screen name>
+ladderlog_write_round_score_help              Write to ladderlog: ROUND_SCORE <score difference> <player> [<team>]
+ladderlog_write_round_score_team_help         Write to ladderlog: ROUND_SCORE_TEAM <score difference> <team>
+ladderlog_write_round_winner_help             Write to ladderlog: ROUND_WINNER <winner>
+ladderlog_write_sacrifice_help                Write to ladderlog: SACRIFICE <player who used the hole> <player who created the hole> <player owning the wall the hole was made into>
+ladderlog_write_wait_for_external_script_help Write to ladderlog: WAIT_FOR_EXTERNAL_SCRIPT (see also: WAIT_FOR_EXTERNAL_SCRIPT and WAIT_FOR_EXTERNAL_SCRIPT_TIMEOUT)
 ladderlog_game_time_interval If nonnegative, write a line with the current game time to the ladder log every n seconds.
+chat_log_help			Write machine parsable chat messages to var/chatlog.txt
 show_fps_help			Enable fps display
 floor_mirror_help		Floor mirror mode
 floor_detail_help		Floor detail settings
